--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/logo/logo-v.jpeg">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
     <title>Violeta - Vinos boutique</title>
+    <script src="animate-wow/wow.min.js"></script>
+    <script>
+        new WOW().init()
+    </script>
 </head>
 <body>
     <!---logo y menu-->
@@ -49,7 +54,7 @@
         <article>
             <h3>Formulario de contacto</h3>
             <form action="" method="post" enctype="text/plain">
-                <div class="formContacto"></div>
+                <div class="formContacto wow animate__animated animate__fadeIn"></div>
                     <fieldset>
                         <legend>Completá el formulario y nos contactaremos a la brevedad:</legend>
                         <div>
