--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
         <article>
             <h3>Formulario de contacto</h3>
             <form action="" method="post" enctype="text/plain">
-                <div class="formContacto wow animate__animated animate__fadeIn"></div>
+                <div class="formContacto wow animate__animated animate__fadeIn">
                     <fieldset>
                         <legend>Completá el formulario y nos contactaremos a la brevedad:</legend>
                         <div>
