Efecto de aparición en Club de vinos

--- a/pages/club.html
+++ b/pages/club.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/logo/logo-v.jpeg">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
     <title>Violeta - Vinos boutique</title>
+    <script src="animate-wow/wow.min.js"></script>
+    <script>
+        new WOW().init()
+    </script>
 </head>
 <body>
     <!---logo y menu-->
@@ -51,9 +56,9 @@
             <!--Video e imágenes de explicación del Club de Vinos-->
             <div id="clubDeVinos">
                 <!--<iframe id="clubDeVinos__video" src="https://www.youtube.com/embed/gYiZw69eZ3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>-->
-                <img class="clubDeVinos__img" src="../assets/images/club-funcionamiento1.png" alt="">
-                <img class="clubDeVinos__img" src="../assets/images/club-funcionamiento2.png" alt="">
-                <img class="clubDeVinos__imgBig" src="../assets/images/club-funcionamiento.jpeg" alt="">
+                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento1.png" alt="">
+                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento2.png" alt="">
+                <img class="clubDeVinos__imgBig  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento.jpeg" alt="">
             </div>
             <form action="" method="post" enctype="multipart/form-data">
                 <fieldset class="basicForm fieldDatosPersonales">
