--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="assets/images/logo/logo-v.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Violeta - Vinos boutique</title>
+    <meta name="keywords" content="vino, cata, maridaje, club de vinos, bodega, vinos boutique, añejo, catador, cava, sommelier, malbec, cabernet, sauvignon, tinto, blanco, rosado, pinot noir, merlot">
+    <meta name="description" content="Club de vinos boutique. Catas y degustaciones exclusivas para los miembros. Maridajes y guía de cata. Envíos gratis. Regalos todos los meses.">
+    <title>Violeta Vinos boutique</title>
 </head>
 <body>
     <div id="main">
@@ -16,8 +18,8 @@
             <div id="header__completo">
                 <h3><a href="index.html"><img id="header__logo" src="assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
                 <div class="header__buttons">
-                    <img class="header__item" src="assets/images/login-logo.png" alt="">
-                    <img class="header__item" src="assets/images/carrito-logo.png" alt="">
+                    <img class="header__item" src="assets/images/login-logo.png" alt="Imagen no disponible">
+                    <img class="header__item" src="assets/images/carrito-logo.png" alt="Imagen no disponible">
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -95,7 +97,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/eventos-invitacion.jpeg" alt="">
+                                            <img class="carrousel__imagen-lg" src="assets/images/eventos-invitacion.jpeg" alt="Imagen no disponible">
                                         </div>
                                     </div>
                                 </div>
@@ -113,7 +115,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/cata-online.png" alt="">
+                                            <img class="carrousel__imagen-lg" src="assets/images/cata-online.jpg" alt="Imagen no disponible">
                                         </div>
                                     </div>
                                 </div>
