--- a/pages/catas.html
+++ b/pages/catas.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Violeta - Vinos boutique</title>
+    <meta name="keywords" content="vino, cata, maridaje, eventos, sommelier, catador, eventos, cata privada, evento de cata, servicio de cata, wine, tasting, sommelier, after">
+    <meta name="description" content="Servicio de exclusivas catas de vinos. Presenciales y virtuales, con vinos seleccionados especialmente para cada evento.">
+    <title>Eventos y catas de vino exclusivas</title>
     <script src="animate-wow/wow.min.js"></script>
     <script>
         new WOW().init()
@@ -20,8 +22,8 @@
         <div id="header__completo">
             <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
             <div class="header__buttons">
-                <img class="header__item" src="../assets/images/login-logo.png" alt="">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="">
+                <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
+                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -57,10 +59,10 @@
     </header>
     <!--cierre del menu-->
     <section>
-        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="">
+        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <h3>Próximos eventos</h3>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.png" alt="Imagen no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Imagen no disponible">
         </article>
         <article>
             <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/eventos-invitacion.jpeg" alt="Imagen no disponible">
@@ -71,22 +73,22 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/images/carrousel-1.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-1.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/carrousel-2.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-2.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/carrousel-3.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-3.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                         <div class="carousel-item active">
-                            <img src="../assets/images/carrousel-4.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-4.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/carrousel-5.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-5.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/images/carrousel-6.png" class="d-block w-100" alt="Imagen no disponible">
+                            <img src="../assets/images/carrousel-6.jpg" class="d-block w-100" alt="Imagen no disponible">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -103,7 +105,7 @@
             <div class="container" id="carrousel__large">
                 <div class="row">
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-1.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-1.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -112,14 +114,14 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-1.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-1.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-2.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-2.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -128,14 +130,14 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-2.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-2.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-3.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-3.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -144,14 +146,14 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-3.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-3.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-4.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-4.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -160,14 +162,14 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-4.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-4.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-5.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-5.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -176,14 +178,14 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-5.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-5.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-6.png" alt="">
+                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-6.jpg" alt="Imagen no disponible">
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -192,7 +194,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-6.png" alt="">
+                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-6.jpg" alt="Imagen no disponible">
                                     </div>
                                 </div>
                             </div>
