--- a/pages/club.html
+++ b/pages/club.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
-    <title>Violeta - Vinos boutique</title>
+    <meta name="keywords" content="vino, club de vinos, suscripción, cava, enología, vinos de colección, añejo, vinos a domicilio, vinos exclusivos">
+    <meta name="description" content="Suscripción a nuestro club de vinos. Recibí exclusivos vinos de tu gusto todos los meses en tu casa. Regalos todos los meses junto a tu box. Envío gratis en CABA.">
+    <title>Club de vinos - Disfrutá de tu box</title>
     <script src="animate-wow/wow.min.js"></script>
     <script>
         new WOW().init()
@@ -20,8 +22,8 @@
         <div id="header__completo">
             <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
             <div class="header__buttons">
-                <img class="header__item" src="../assets/images/login-logo.png" alt="">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="">
+                <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
+                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -57,15 +59,15 @@
     </header>
     <!--cierre del menu-->
     <section>
-        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="">
+        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <article>
             <h3>Club de vinos</h3>
             <!--Video e imágenes de explicación del Club de Vinos-->
             <div id="clubDeVinos">
                 <!--<iframe id="clubDeVinos__video" src="https://www.youtube.com/embed/gYiZw69eZ3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>-->
-                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento1.png" alt="">
-                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento2.png" alt="">
-                <img class="clubDeVinos__imgBig  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento.jpeg" alt="">
+                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento1.jpg" alt="Imagen no disponible">
+                <img class="clubDeVinos__img  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento2.jpg" alt="Imagen no disponible">
+                <img class="clubDeVinos__imgBig  wow animate__animated animate__fadeIn" src="../assets/images/club-funcionamiento.jpeg" alt="Imagen no disponible">
             </div>
             <form action="" method="post" enctype="multipart/form-data">
                 <fieldset class="basicForm fieldDatosPersonales">
