--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
-    <title>Violeta - Vinos boutique</title>
+    <meta name="keywords" content="vino, suscripción, club de vinos, catas privadas, servicio de cata, cata, cata online, tinto, rosado, blanco">
+    <meta name="description" content="Contáctanos para obtener más información. Suscripción a club de vinos. Servicio de catas, en eventos (con reserva previa) o catas privadas.">
+    <title>Contáctanos - VIOLETA Vinos</title>
     <script src="animate-wow/wow.min.js"></script>
     <script>
         new WOW().init()
@@ -20,8 +22,8 @@
         <div id="header__completo">
             <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
             <div class="header__buttons">
-                <img class="header__item" src="../assets/images/login-logo.png" alt="">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="">
+                <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
+                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -57,7 +59,7 @@
     </header>
     <!--cierre del menu-->
     <section>
-        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="">
+        <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <article>
             <h3>Formulario de contacto</h3>
             <form action="" method="post" enctype="text/plain">
