--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/animate-wow/animate.min.css">
-    <title>Violeta - Vinos boutique</title>
+    <meta name="keywords" content="vino, comprar, cava, dig wine, añejo, cuerpo, aroma, vino boutique, catador, orgánico, espumante, malbec, cabernet, sauvignon, tinto, blanco, rosado, pinot noir, merlot">
+    <meta name="description" content="Tienda de vinos de selección. Vinos boutique exclusivos. Envíos gratis en CABA a partir de $5000.">
+    <title>Tienda de vinos boutique y de selección</title>
     <script src="animate-wow/wow.min.js"></script>
     <script>
         new WOW().init()
@@ -21,8 +23,8 @@
             <div id="header__completo">
                 <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
                 <div class="header__buttons">
-                    <img class="header__item" src="../assets/images/login-logo.png" alt="">
-                    <img class="header__item" src="../assets/images/carrito-logo.png" alt="">
+                    <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
+                    <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -58,7 +60,7 @@
         </header>
         <!--cierre del menu-->
         <section>
-            <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="">
+            <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
             <article>
                 <h3>Nuestros vinos</h3>
                 <div id="listadoProductos">
