--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <section>
             <article>
                 <div id="proximosEventos">
-                    <table id="eventos" cellspacing="5" cellpadding="5">
+                    <table id="eventos">
                         <th colspan="4"><h3>Próximos eventos</h3></th>
                         <tr class="eventos__row-1">
-                            <td class="eventos__fecha">10 JUL</td>
-                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cheese & Wine</td>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <td class="eventos__fecha">06 AGO</td>
+                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cata online</td>
+                            <!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -101,12 +101,29 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
+                            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-center">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                      <h5 class="modal-title" id="staticBackdropLabel">VIOLETA VINOS</h5>
+                                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                      <img src="/assets/images/cata-online.jpg" alt="Imagen no disponible">
+                                    </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                      <button type="button" class="btn btn-primary">Understood</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                             <td><a href = "mailto: violetavinos@gmail.com?subject = Reservar cupo&body = ¡Hola! Quiero reservar un cupo para el evento...">¡Reservá tu lugar!</a></td>
                         </tr>
                         <tr class="eventos__row-2">
-                            <td class="eventos__fecha">06 AGO</td>
-                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cata en casa</td>
+                            <td class="eventos__fecha">13 AGO</td>
+                            <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Degustación boutique</td>
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
@@ -115,7 +132,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/cata-online.jpg" alt="Imagen no disponible">
+                                            <img class="carrousel__imagen-lg" src="assets/images/degustacion-agosto.jpg" alt="Imagen no disponible">
                                         </div>
                                     </div>
                                 </div>
