--- a/pages/club.html
+++ b/pages/club.html
@@ -109,7 +109,7 @@
                     <label for="dpto">Dpto:</label>
                     <input class="texto" type="text" name="dpto">
                 </fieldset>
-                <input class="boton-envio" type="submit" id="sumbit" name="submit" value="¡Quiero ser miembro del club!" style="width: 210px;">
+                <input class="boton-miembro" type="submit" id="sumbit" name="submit" value="¡Quiero ser miembro del club!">
             </form>
         </article>
     </section>
