--- a/pages/catas.html
+++ b/pages/catas.html
@@ -62,10 +62,10 @@
         <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <h3>Próximos eventos</h3>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Imagen no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/degustacion-agosto.jpg" alt="Imagen no disponible">
         </article>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/eventos-invitacion.jpeg" alt="Imagen no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Imagen no disponible">
         </article>
         <article>
             <!--Carrousel de imágenes-->
@@ -201,6 +201,44 @@
                         </div>
                     </div>
                 </div>
+                <!--<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../assets/images/carrousel-1.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../assets/images/carrousel-2.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../assets/images/carrousel-3.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../assets/images/carrousel-4.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../assets/images/carrousel-5.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../assets/images/carrousel-6.jpg" class="d-block w-100" alt="Imagen no disponible">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>-->
             </div>
         </article>
     </section>
