--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -17,7 +17,7 @@
     </script>
 </head>
 <body>
-    <div id="main">
+    <!--<div id="main">-->
         <!---logo y menu-->
         <header>
             <div id="header__completo">
@@ -164,7 +164,7 @@
             </div>
         </footer>
         <!--cierre de pie de pagina-->
-    </div>
+    <!--</div>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
