--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="keywords" content="vino, cata, maridaje, club de vinos, bodega, vinos boutique, añejo, catador, cava, sommelier, malbec, cabernet, sauvignon, tinto, blanco, rosado, pinot noir, merlot">
     <meta name="description" content="Club de vinos boutique. Catas y degustaciones exclusivas para los miembros. Maridajes y guía de cata. Envíos gratis. Regalos todos los meses.">
+    <meta property="og:title" content="VIOLETA VINOS" />
+    <meta property="og:site_name" content="Violeta Vinos boutique"> 
+    <meta property="og:type" content="website"> 
     <title>Violeta Vinos boutique</title>
 </head>
 <body>
