Tienda completa. Header mobile update

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!---logo y menu-->
         <header>
             <div id="header__completo">
-                <h3><a href="index.html"><img id="header__logo" src="assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
+                <h3><a href="index.html"><img id="header__logo" src="assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
                 <div class="header__buttons">
-                    <img class="header__item" src="assets/images/login-logo.png" alt="Imagen no disponible">
-                    <img class="header__item" src="assets/images/carrito-logo.png" alt="Imagen no disponible">
+                    <img class="header__item" src="assets/images/login-logo.png" alt="Login">
+                    <img class="header__item" src="assets/images/carrito-logo.png" alt="Carrito de compras">
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -47,18 +47,22 @@
                             <li class="nav-item">
                                 <a class="nav-link menubar__link" href="pages/contacto.html">Contacto</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" href="index.html">Login</a>
+                            </li>
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
                             <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
                         </form>
                     </div>
+                    <img class="header__item header__item-mobile" src="assets/images/carrito-logo.png" alt="Carrito de compras">
                 </div>
             </nav>
         </header>
         <!--cierre del menu-->
         <section>
-            <img class="body__img-portada" src="assets/images/imagen-portada.jpeg" alt="Reel de imagenes">
+            <img class="body__img-portada" src="assets/images/imagen-portada.jpeg" alt="Imagen de portada">
             <article>
                 <h3>¡Destacados de la semana!</h3>
                 <!--los productos se muestran en fila--> 
@@ -66,13 +70,13 @@
                     <table>
                         <tr>
                             <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto1.png" alt="Imagen no disponible">
+                                <img class="productosDestacados__image" src="assets/images/productos/producto1.png" alt="Luigi Bosca Cabernet Sauvignon">
                             </td>
                             <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto2.png" alt="Imagen no disponible">
+                                <img class="productosDestacados__image" src="assets/images/productos/producto2.png" alt="Jorge Rubio Gran Reserva Malbec">
                             </td>
                             <td>
-                                <img class="productosDestacados__image" src="assets/images/productos/producto3.png" alt="Imagen no disponible">
+                                <img class="productosDestacados__image" src="assets/images/productos/producto3.png" alt="Jorge Rubio Privado Reserva Malbec">
                             </td>
                         </tr>
                         <tr>
@@ -92,19 +96,6 @@
                         <tr class="eventos__row-1">
                             <td class="eventos__fecha">06 AGO</td>
                             <td class="eventos__descripcion" data-bs-toggle="modal" data-bs-target="#exampleModal">Cata online</td>
-                            <!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <img class="carrousel__imagen-lg" src="assets/images/eventos-invitacion.jpeg" alt="Imagen no disponible">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>-->
                             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-center">
                                   <div class="modal-content">
@@ -146,12 +137,12 @@
                     <table id="eventos__small">
                         <th colspan="2"><h3>Próximos eventos</h3></th>
                         <tr class="eventos__row-1">
-                            <td class="eventos__fecha">10 JUL</td>
-                            <td class="eventos__descripcion">Cheese & Wine</td>
-                        </tr>
-                        <tr class="eventos__row-2">
                             <td class="eventos__fecha">06 AGO</td>
                             <td class="eventos__descripcion">Cata en casa</td>
+                        </tr>
+                        <tr class="eventos__row-2">
+                            <td class="eventos__fecha">13 AGO</td>
+                            <td class="eventos__descripcion">Degustación boutique</td>
                         </tr>
                     </table>
                 </div>
