--- a/pages/catas.html
+++ b/pages/catas.html
@@ -20,10 +20,10 @@
     <!---logo y menu-->
     <header>
         <div id="header__completo">
-            <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
+            <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
             <div class="header__buttons">
-                <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
+                <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
+                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -48,12 +48,16 @@
                         <li class="nav-item">
                             <a class="nav-link menubar__link" href="contacto.html">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" href="../index.html">Login</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
                         <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
                     </form>
                 </div>
+                <img class="header__item header__item-mobile" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
             </div>
         </nav>
     </header>
@@ -62,10 +66,10 @@
         <img class="section__banner" src="../assets/images/banners/banner-top.jpg" alt="Imagen no disponible">
         <h3>Próximos eventos</h3>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/degustacion-agosto.jpg" alt="Imagen no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/degustacion-agosto.jpg" alt="Flyer de evento no disponible">
         </article>
         <article>
-            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Imagen no disponible">
+            <img class="evento__imgEvento wow animate__animated animate__fadeInUp" src="../assets/images/cata-online.jpg" alt="Flyer de evento no disponible">
         </article>
         <article>
             <!--Carrousel de imágenes-->
@@ -101,144 +105,29 @@
                     </button>
                 </div>
             </div>
+            <hr>
               <!--Fin Carrousel-->
             <div class="container" id="carrousel__large">
                 <div class="row">
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-1.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-1.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-1.jpg" alt="Foto de evento no disponible">
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-2.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-2.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-2.jpg" alt="Foto de evento no disponible">
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-3.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-3.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-3.jpg" alt="Foto de evento no disponible">
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-4.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-4.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-4.jpg" alt="Foto de evento no disponible">
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-5.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-5.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-5.jpg" alt="Foto de evento no disponible">
                     </div>
                     <div class="col-sm-4 col-md-2 col-xl-2">
-                        <img class="carrousel__imagen" data-bs-toggle="modal" data-bs-target="#exampleModal" src="../assets/images/carrousel-6.jpg" alt="Imagen no disponible">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">VIOLETA VINOS</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img class="carrousel__imagen-lg" src="../assets/images/carrousel-6.jpg" alt="Imagen no disponible">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <img class="carrousel__imagen" src="../assets/images/carrousel-6.jpg" alt="Foto de evento no disponible">
                     </div>
                 </div>
-                <!--<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="../assets/images/carrousel-1.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../assets/images/carrousel-2.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../assets/images/carrousel-3.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../assets/images/carrousel-4.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../assets/images/carrousel-5.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../assets/images/carrousel-6.jpg" class="d-block w-100" alt="Imagen no disponible">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>-->
             </div>
         </article>
     </section>
