--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,10 +20,10 @@
     <!---logo y menu-->
     <header>
         <div id="header__completo">
-            <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
+            <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
             <div class="header__buttons">
-                <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
-                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
+                <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
+                <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -48,12 +48,16 @@
                         <li class="nav-item">
                             <a class="nav-link menubar__link" href="contacto.html">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link menubar__link" href="../index.html">Login</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
                         <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
                     </form>
                 </div>
+                <img class="header__item header__item-mobile" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
             </div>
         </nav>
     </header>
