--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -21,10 +21,10 @@
         <!---logo y menu-->
         <header>
             <div id="header__completo">
-                <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Imagen no disponible"></a></h3>
+                <h3><a href="../index.html"><img id="header__logo" src="../assets/images/logo/logo-chico.png" alt="Violeta Vinos"></a></h3>
                 <div class="header__buttons">
-                    <img class="header__item" src="../assets/images/login-logo.png" alt="Imagen no disponible">
-                    <img class="header__item" src="../assets/images/carrito-logo.png" alt="Imagen no disponible">
+                    <img class="header__item" src="../assets/images/login-logo.png" alt="Login">
+                    <img class="header__item" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-light">
@@ -49,12 +49,16 @@
                             <li class="nav-item">
                                 <a class="nav-link menubar__link" href="contacto.html">Contacto</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link menubar__link" href="../index.html">Login</a>
+                            </li>
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2 texto" type="search" placeholder="Buscar..." aria-label="Search">
                             <button class="btn btn-outline-success boton-buscar" type="submit">Search</button>
                         </form>
                     </div>
+                    <img class="header__item header__item-mobile" src="../assets/images/carrito-logo.png" alt="Carrito de compras">
                 </div>
             </nav>
         </header>
@@ -65,7 +69,7 @@
                 <h3>Nuestros vinos</h3>
                 <div id="listadoProductos">
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto1.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto1.png" class="card-img-top" alt="Luigi Bosca Cabernet">
                         <div class="card-body">
                             <label class="card-title">Luigi Bosca Cabernet</label>
                             <p class="card-text">$1000.00</p>
@@ -73,7 +77,7 @@
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto2.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto2.png" class="card-img-top" alt="Jorge Rubio Gran Reserva">
                         <div class="card-body">
                             <label class="card-title">Jorge Rubio Gran Reserva</label>
                             <p class="card-text">$1500.00</p>
@@ -81,7 +85,7 @@
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto3.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto3.png" class="card-img-top" alt="Jorge Rubio Malbec">
                         <div class="card-body">
                             <label class="card-title">Jorge Rubio Malbec</label>
                             <p class="card-text">$1250.00</p>
@@ -89,42 +93,42 @@
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto1.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto4.png" class="card-img-top" alt="Animal orgánico">
                         <div class="card-body">
-                            <label class="card-title">Luigi Bosca Cabernet</label>
-                            <p class="card-text">$1000.00</p>
+                            <label class="card-title">Vino orgánico Animal</label>
+                            <p class="card-text">$1299.00</p>
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto2.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto5.png" class="card-img-top" alt="Nucha Orgánico">
                         <div class="card-body">
-                            <label class="card-title">Jorge Rubio Gran Reserva</label>
-                            <p class="card-text">$1500.00</p>
+                            <label class="card-title">Vino Nucha Orgánico</label>
+                            <p class="card-text">$2550.00</p>
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto3.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto6.png" class="card-img-top" alt="Susana Balbo Brioso">
                         <div class="card-body">
-                            <label class="card-title">Jorge Rubio Malbec</label>
-                            <p class="card-text">$1250.00</p>
+                            <label class="card-title">Susana Balbo Brioso</label>
+                            <p class="card-text">$5425.00</p>
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>                    
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto1.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto7.png" class="card-img-top" alt="Susana Balbo Signature">
                         <div class="card-body">
-                            <label class="card-title">Luigi Bosca Cabernet</label>
-                            <p class="card-text">$1000.00</p>
+                            <label class="card-title">Susana Balbo Signature</label>
+                            <p class="card-text">$2700.00</p>
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
                     <div class="card listadoProductos__producto wow animate__animated animate__fadeIn" style="width: 9rem;">
-                        <img src="../assets/images/productos/producto3.png" class="card-img-top" alt="Imagen no disponible">
+                        <img src="../assets/images/productos/producto8.png" class="card-img-top" alt="1905 Blend">
                         <div class="card-body">
-                            <label class="card-title">Jorge Rubio Malbec</label>
-                            <p class="card-text">$1250.00</p>
+                            <label class="card-title">Vino 1905 Blend</label>
+                            <p class="card-text">$5500.00</p>
                             <a href="#" class="btn btn-primary boton-addcart">Comprar</a>
                         </div>
                     </div>
