--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link menubar__link" href="pages/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link menubar__link" href="index.html">Login</a>
+                                <a class="nav-link menubar__link menubar__link-login" href="index.html">Login</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
