--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,7 +49,7 @@
                             <a class="nav-link menubar__link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menubar__link" href="../index.html">Login</a>
+                            <a class="nav-link menubar__link menubar__link-login" href="../index.html">Login</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
